Bootstrap djangorestframework-files

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==45.0.5
 defusedxml==0.7.1
 Django==5.2.4
 djangorestframework==3.16.0
+djangorestframework-files==1.1.0
 djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
 idna==3.10
