--- a/requirements.txt
+++ b/requirements.txt
@@ -2,25 +2,39 @@ asgiref==3.9.1
 certifi==2025.7.14
 cffi==1.17.1
 charset-normalizer==3.4.2
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==45.0.5
 defusedxml==0.7.1
 Django==5.2.4
 djangorestframework==3.16.0
-djangorestframework-files==1.1.0
 djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
+dotenv==0.9.9
+drf-yasg==1.21.10
 idna==3.10
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
 oauthlib==3.3.1
+openapi-codec==1.3.2
+packaging==25.0
 postgres==4.0
 psycopg2-binary==2.9.10
 psycopg2-pool==1.2
 pycparser==2.22
 PyJWT==2.10.1
+python-dotenv==1.1.1
 python3-openid==3.2.0
+pytz==2025.2
+PyYAML==6.0.2
 requests==2.32.4
 requests-oauthlib==2.0.0
+simplejson==3.20.1
 social-auth-app-django==5.5.1
 social-auth-core==4.7.0
 sqlparse==0.5.3
 tzdata==2025.2
+uritemplate==4.2.0
 urllib3==2.5.0
