--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
 dotenv==0.9.9
 drf-yasg==1.21.10
+gunicorn==23.0.0
 idna==3.10
 inflection==0.5.1
 itypes==1.2.0
